Apache Solr UIMA Metadata Extraction Library
                            Release Notes

This file describes changes to the Solr UIMA (contrib/uima) module. See SOLR-2129 for details.

Introduction
------------
This module is intended to be used while indexing documents.
Its purpose is to provide additional on the fly automatically generated fields to the Solr index.
Such fields could be language, concepts, keywords, sentences, named entities, etc.

 UIMA Dependency
 ---------------
uimaj-core          v2.3.1 
OpenCalaisAnnotator v2.3.1-SNAPSHOT rev. 1062868
HMMTagger           v2.3.1-SNAPSHOT rev. 1062868
AlchemyAPIAnnotator v2.3.1-SNAPSHOT rev. 1062868
WhitespaceTokenizer v2.3.1-SNAPSHOT rev. 1076132

$Id$

==================  4.0.0-dev ==============

(No Changes)

==================  3.3.0-dev ==============
  
Bug Fixes
----------------------

* SOLR-2579: UIMAUpdateRequestProcessor ignore error fails if text.length() < 100.
  (Elmer Garduno via koji)

==================  3.2.0 ==================

Upgrading from Solr 3.1
----------------------

* <uimaConfig/> just beneath <config> ... </config> is no longer supported.
  It should move to UIMAUpdateRequestProcessorFactory setting.
  See contrib/uima/README.txt for more details. (SOLR-2436)

New Features
----------------------

* SOLR-2503: extend mapping function to map feature value to dynamicField. (koji)

* SOLR-2512: add ignoreErrors flag so that users can ignore exceptions in AE.
  (Tommaso Teofili, koji)

Test Cases:
----------------------

* SOLR-2387: add mock annotators for improved testing,
  (Tommaso Teofili via rmuir)

Other Changes
----------------------

* SOLR-2436: move uimaConfig to under the uima's update processor in solrconfig.xml.
  (Tommaso Teofili, koji)

==================  3.1.0 ==================

Initial Release