@@ -17,23 +17,22 @@ package org.apache.solr.uima.processor;
  * limitations under the License.
  */
 
-import java.io.IOException;
-import java.util.Map;
-
 import org.apache.solr.common.SolrException;
-import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.common.SolrException.ErrorCode;
+import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.core.SolrCore;
 import org.apache.solr.uima.processor.SolrUIMAConfiguration.MapField;
 import org.apache.solr.uima.processor.ae.AEProvider;
 import org.apache.solr.uima.processor.ae.AEProviderFactory;
 import org.apache.solr.update.AddUpdateCommand;
 import org.apache.solr.update.processor.UpdateRequestProcessor;
-import org.apache.uima.UIMAException;
 import org.apache.uima.analysis_engine.AnalysisEngine;
 import org.apache.uima.analysis_engine.AnalysisEngineProcessException;
 import org.apache.uima.jcas.JCas;
 import org.apache.uima.resource.ResourceInitializationException;
+
+import java.io.IOException;
+import java.util.Map;
 
 /**
  * Update document(s) to be indexed with UIMA extracted information
@@ -69,7 +68,7 @@ public class UIMAUpdateRequestProcessor extends UpdateRequestProcessor {
       String[] texts = getTextsToAnalyze(solrInputDocument);
       for (int i = 0; i < texts.length; i++) {
         text = texts[i];
-        if (text != null && !"".equals(text)) {
+        if (text != null && text.length()>0) {
           /* process the text value */
           JCas jcas = processText(text);
 
@@ -83,7 +82,7 @@ public class UIMAUpdateRequestProcessor extends UpdateRequestProcessor {
           }
         }
       }
-    } catch (UIMAException e) {
+    } catch (Exception e) {
       String logField = solrUIMAConfiguration.getLogField();
       String optionalFieldInfo = logField == null ? "." :
         new StringBuilder(". ").append(logField).append("=")
@@ -110,7 +109,7 @@ public class UIMAUpdateRequestProcessor extends UpdateRequestProcessor {
   private String[] getTextsToAnalyze(SolrInputDocument solrInputDocument) {
     String[] fieldsToAnalyze = solrUIMAConfiguration.getFieldsToAnalyze();
     boolean merge = solrUIMAConfiguration.isFieldsMerging();
-    String[] textVals = null;
+    String[] textVals;
     if (merge) {
       StringBuilder unifiedText = new StringBuilder("");
       for (int i = 0; i < fieldsToAnalyze.length; i++) {
